--- a/BasicMsTestV2Tests/BasicMsTestV2Tests.csproj
+++ b/BasicMsTestV2Tests/BasicMsTestV2Tests.csproj
@@ -48,7 +48,10 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="DataDrivenTests.cs" />
+    <Compile Include="FailingTests.cs" />
+    <Compile Include="DynamicDataDrivenTests.cs" />
+    <Compile Include="PassingTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
